add table1 writer

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,8 +12,9 @@ server {
         proxy_pass http://backend:8000;
     }
 
-    location /media/ {
-        root /var/html;
+     location /media {
+        autoindex on;
+        alias /app/media/;
     }
 
 
