--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,10 +86,16 @@ services:
       - backend
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-#      - ./certbot/www:/var/www/certbot/:ro
-#      - ./certbot/www/:/etc/nginx/ssl/:ro
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/www/:/etc/nginx/ssl/:ro
       - static:/app/static
       - media:/app/media
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
 
   table1-writer:
     restart: always
