--- a/nginx.conf
+++ b/nginx.conf
@@ -1,43 +1,45 @@
 server {
-
     listen 80;
-    server_name 127.0.0.1 localhost 0.0.0.0  asu-payme.com www.asu-payme.com;
-    index index.html;
     client_max_body_size 10M;
+    server_name loclahost 194.87.252.238 127.0.0.1;
+    server_tokens off;
 
-        location / {
-        proxy_set_header Host $host;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
+
+# Для 80:
+    location / {
         proxy_pass http://backend:8000;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 
-     location /media {
+        location /media {
         autoindex on;
         alias /app/media/;
     }
 
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
+}
+
+server {
+    listen 80;
+    client_max_body_size 10M;
+    server_name oldit.ru www.oldit.ru;
+    server_tokens off;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    location / {
+        return 301 https://oldit.ru$request_uri;
     }
 
-    location /static/ {
-        alias /app/static/;
-    }
-
-    location /admin/ {
-        proxy_pass http://backend:8000/admin/;
-    }
-
-    location /api/ {
-        proxy_set_header Host $host;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000;
-    }
-
-
+# Для 80:
+    # location / {
+        # proxy_pass http://backend:8000;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header Host $host;
+        # proxy_redirect off;
+    # }
 
 }
+
