--- a/nginx.conf
+++ b/nginx.conf
@@ -41,5 +41,33 @@ server {
         # proxy_redirect off;
     # }
 
+    server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+    server_name asu-payme.com;
+
+    ssl_certificate /etc/nginx/ssl/live/oldit.ru/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/oldit.ru/privkey.pem;
+
+    location / {
+        proxy_pass http://backend:8000;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+    location /static/ {
+        alias /app/static/;
+    }
+
+     location /media {
+        autoindex on;
+        alias /app/media/;
+    }
+
+        location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
+
 }
 
