--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -85,7 +85,7 @@ services:
     depends_on:
       - backend
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx_dev.conf:/etc/nginx/conf.d/default.conf:ro
       - static:/app/static
       - media:/app/media
 
