--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       - static:/app/collected_static/
       - media:/app/media/
       - ./logs/backend_deposit:/app/logs
-      - ./backend_deposit:/app
+#      - ./backend_deposit:/app
     entrypoint: bash /app/entrypoint.sh
 
 
