--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       - static:/app/collected_static/
       - media:/app/media/
       - ./logs/backend_deposit:/app/logs
-#      - ./backend_deposit:/app
+      - ./backend_deposit:/app
     entrypoint: bash /app/entrypoint.sh
 
 
@@ -82,8 +82,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    depends_on:
-      - backend
+#    depends_on:
+#      - backend
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./certbot/www:/var/www/certbot/:ro
