--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -82,8 +82,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
-#    depends_on:
-#      - backend
+    depends_on:
+      - backend
     volumes:
       - ./nginx_dev.conf:/etc/nginx/conf.d/default.conf:ro
       - static:/app/static
