--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,8 +82,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
-#    depends_on:
-#      - backend
+    depends_on:
+      - backend
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./certbot/www:/var/www/certbot/:ro
