--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -23,7 +23,7 @@ services:
 
   pgadmin:
     container_name: pgadmin_container_deposit
-    image: dpage/pgadmin4:latest
+    image: dpage/pgadmin4:7.3
     env_file: .env
     environment:
       PGADMIN_DEFAULT_EMAIL: $PGADMIN_DEFAULT_EMAIL
