--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -44,29 +44,24 @@ services:
 
   redis:
     container_name: redis_deposit
-    image: redis:latest
-    restart: always
-    environment:
-      - REDIS_PASSWORD=$REDIS_PASSWORD
-      - REDIS_PORT=$REDIS_PORT
-      - REDIS_DATABASES=16
-    entrypoint: redis-server --appendonly yes --requirepass $REDIS_PASSWORD --maxmemory 512mb --maxmemory-policy allkeys-lru
-    networks:
-      - default
+    image: redis:alpine
     ports:
       - "6379:6379"
+    expose:
+      - '6379'
     volumes:
-#      - ./redis/data:/data
-      - ./redis/etc/redis.conf:/usr/local/etc/redis/redis.conf
       - redis_data:/data
-
 
   backend:
     build: ./backend_deposit
     restart: always
     env_file: .env
+#    environment:
+#      - CELERY_BROKER_URL=redis://127.0.0.1:6379/0
+#      - CELERY_RESULT_BACKEND=redis://127.0.0.1:6379/0
     depends_on:
       - db_postgres
+      - redis
     volumes:
       - static:/app/collected_static/
       - media:/app/media/
@@ -74,6 +69,28 @@ services:
       - ./backend_deposit:/app
     entrypoint: bash /app/entrypoint.sh
 
+
+  celery:
+    build: ./backend_deposit
+    restart: always
+    command: celery -A backend_deposit worker -l info
+#    volumes:
+#     - ./backend_deposit:/app
+    env_file: .env
+    depends_on:
+      - redis
+      - backend
+#    entrypoint: bash /app/celery_entrypoint.sh
+
+  celery-beat:
+    build: ./backend_deposit
+    command: celery -A backend_deposit beat -l info
+#    volumes:
+#     - ./backend_deposit:/app
+    env_file: .env
+    depends_on:
+      - redis
+      - backend
 
   nginx:
     image: nginx:1.19.3
@@ -88,15 +105,3 @@ services:
       - ./nginx_dev.conf:/etc/nginx/conf.d/default.conf:ro
       - static:/app/static
       - media:/app/media
-
-
-#  table1-writer:
-#    restart: always
-#    build: ./google_writer
-#    command: python3 table1_writer.py
-#    env_file: .env
-#    depends_on:
-#      - redis
-#      - db_postgres
-#    volumes:
-#      - ./logs/Table1:/app/logs
