--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -23,7 +23,7 @@ services:
 
   pgadmin:
     container_name: pgadmin_container_deposit
-    image: dpage/pgadmin4:7.3
+    image: dpage/pgadmin4
     env_file: .env
     environment:
       PGADMIN_DEFAULT_EMAIL: $PGADMIN_DEFAULT_EMAIL
@@ -44,12 +44,13 @@ services:
 
   redis:
     container_name: redis_deposit
-    image: redis:alpine
+    image: redis:latest
+    command: redis-server --save 20 1 --loglevel warning
+    restart: always
     ports:
       - "6379:6379"
-    expose:
-      - '6379'
     volumes:
+      - ./redis/etc/redis.conf:/usr/local/etc/redis/redis.conf
       - redis_data:/data
 
   backend:
@@ -61,7 +62,8 @@ services:
 #      - CELERY_RESULT_BACKEND=redis://127.0.0.1:6379/0
     depends_on:
       - db_postgres
-      - redis
+#      - redis
+#      - celery
     volumes:
       - static:/app/collected_static/
       - media:/app/media/
@@ -71,26 +73,39 @@ services:
 
 
   celery:
+    container_name: celery
     build: ./backend_deposit
     restart: always
-    command: celery -A backend_deposit worker -l info
+    command: celery -A backend_deposit.celery:app worker -l info -n myworker
 #    volumes:
 #     - ./backend_deposit:/app
     env_file: .env
     depends_on:
+      - db_postgres
       - redis
       - backend
-#    entrypoint: bash /app/celery_entrypoint.sh
 
   celery-beat:
     build: ./backend_deposit
-    command: celery -A backend_deposit beat -l info
+    command: celery -A backend_deposit.celery:app beat -l info
 #    volumes:
 #     - ./backend_deposit:/app
     env_file: .env
     depends_on:
-      - redis
-      - backend
+      - celery
+
+#  flower:
+#    container_name: flower
+#    image: mher/flower
+#    build: ./backend_deposit
+#    command: celery -A backend_deposit.celery flower --port=5555
+#    ports:
+#      - 5556:5555
+#    env_file: .env
+#    depends_on:
+#      - backend
+#      - redis
+#      - celery
 
   nginx:
     image: nginx:1.19.3
@@ -101,6 +116,7 @@ services:
       - "443:443"
     depends_on:
       - backend
+      - flower
     volumes:
       - ./nginx_dev.conf:/etc/nginx/conf.d/default.conf:ro
       - static:/app/static
