--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -116,7 +116,7 @@ services:
       - "443:443"
     depends_on:
       - backend
-      - flower
+#      - flower
     volumes:
       - ./nginx_dev.conf:/etc/nginx/conf.d/default.conf:ro
       - static:/app/static
