Change beat to django

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,11 +45,12 @@ services:
   redis:
     container_name: redis_deposit
     image: redis:latest
+    command: redis-server --save 20 1 --loglevel warning
     restart: always
     ports:
       - "6379:6379"
     volumes:
-      - ./redis/etc/redis.conf:/usr/local/etc/redis/redis.conf
+#      - ./redis/etc/redis.conf:/usr/local/etc/redis/redis.conf
       - redis_data:/data
 
 
@@ -71,14 +72,14 @@ services:
   celery:
     build: ./backend_deposit
     restart: always
-    command: celery -A backend_deposit worker -l info
+    command: celery -A backend_deposit worker -l info -n myworker1
     env_file: .env
     depends_on:
       - redis
 
   celery-beat:
     build: ./backend_deposit
-    command: celery -A backend_deposit beat -l info
+    command: celery -A backend_deposit beat -l info -S django
     env_file: .env
     depends_on:
       - celery
