--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,8 @@ services:
     restart: always
     command: celery -A backend_deposit worker -l info -n myworker1
     env_file: .env
+    volumes:
+      - media:/app/media/
     depends_on:
       - redis
 
