--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
   celery:
     build: ./backend_deposit
     restart: always
-    command: celery -A backend_deposit worker -l info -n myworker1
+    command: celery -A backend_deposit worker -l info -n myworker1  --concurrency=3
     env_file: .env
     volumes:
       - media:/app/media/
