--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -76,9 +76,10 @@ services:
     container_name: celery
     build: ./backend_deposit
     restart: always
-    command: celery -A backend_deposit.celery:app worker -l info -n myworker --concurrency=3
+    command: celery -A backend_deposit.celery:app worker -l info -n myworker --concurrency=3 --logfile logs/celery_file.log
     volumes:
       - media:/app/media/
+      - ./logs/celery:/app/logs
     env_file: .env
     depends_on:
       - redis
