--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ services:
     env_file: .env
     volumes:
       - media:/app/media/
+      - ./logs/celery:/app/logs
     depends_on:
       - redis
 
