--- a/backend_deposit/Dockerfile
+++ b/backend_deposit/Dockerfile
@@ -10,5 +10,9 @@ COPY rus.traineddata /usr/share/tesseract-ocr/5/tessdata/
 COPY rus.traineddata /usr/share/tesseract-ocr/4.00/tessdata/
 COPY rus.traineddata /usr/local/share/tessdata/
 COPY rus.traineddata /usr/local/share/tessdata/
+COPY eng.traineddata /usr/share/tesseract-ocr/5/tessdata/
+COPY eng.traineddata /usr/share/tesseract-ocr/4.00/tessdata/
+COPY eng.traineddata /usr/local/share/tessdata/
+COPY eng.traineddata /usr/local/share/tessdata/
 RUN ["chmod", "u+x", "/app/entrypoint.sh"]
 #ENTRYPOINT ["/app/entrypoint.sh"]
