--- a/nginx.conf
+++ b/nginx.conf
@@ -28,13 +28,13 @@ server {
 server {
     listen 80;
     client_max_body_size 10M;
-    server_name oldit.ru www.oldit.ru;
+    server_name asu-payme.com www.asu-payme.com;
     server_tokens off;
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
     location / {
-        return 301 https://oldit.ru$request_uri;
+        return 301 https://asu-payme.com$request_uri;
     }
 }
 
@@ -44,8 +44,8 @@ server {
     listen [::]:443 ssl http2;
     server_name asu-payme.com;
 
-    ssl_certificate /etc/nginx/ssl/live/oldit.ru/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/oldit.ru/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/asu-payme.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/asu-payme.com/privkey.pem;
 
     location / {
         proxy_pass http://backend:8000;
