--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,13 +2,13 @@ version: '3'
 
 volumes:
   pg_data:
-  pgadmin_data:
-  redis_data:
-  static:
-  media:
+  pgadmin_data2:
+  redis_data2:
+  static2:
+  media2:
 
 services:
-  db_postgres:
+  db_postgres2:
     container_name: db_deposit
     image: postgres:14-alpine
     env_file: .env
@@ -21,28 +21,28 @@ services:
     restart: always
 
 
-  pgadmin:
-    container_name: pgadmin_container_deposit
-    image: dpage/pgadmin4
-    env_file: .env
-    environment:
-      PGADMIN_DEFAULT_EMAIL: $PGADMIN_DEFAULT_EMAIL
-      PGADMIN_DEFAULT_PASSWORD: $PGADMIN_DEFAULT_PASSWORD
+#  pgadmin:
+#    container_name: pgadmin_container_deposit
+#    image: dpage/pgadmin4
+#    env_file: .env
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: $PGADMIN_DEFAULT_EMAIL
+#      PGADMIN_DEFAULT_PASSWORD: $PGADMIN_DEFAULT_PASSWORD
+#
+#    depends_on:
+#      - db_postgres
+#    volumes:
+#      - pgadmin_data:/var/lib/pgadmin
+#    ports:
+#      - "5050:80"
+#    restart: always
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '0.5'
+#          memory: 1G
 
-    depends_on:
-      - db_postgres
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
-    ports:
-      - "5050:80"
-    restart: always
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 1G
-
-  redis:
+  redis2:
     container_name: redis_deposit
     image: redis:latest
     command: redis-server --save 20 1 --loglevel warning
@@ -51,9 +51,9 @@ services:
       - "16379:6379"
     volumes:
       - ./redis/etc/redis.conf:/usr/local/etc/redis/redis.conf
-      - redis_data:/data
+      - redis_data2:/data
 
-  backend:
+  backend2:
     build: ./backend_deposit
     restart: always
     env_file: .env
@@ -61,51 +61,51 @@ services:
 #      - CELERY_BROKER_URL=redis://127.0.0.1:6379/0
 #      - CELERY_RESULT_BACKEND=redis://127.0.0.1:6379/0
     depends_on:
-      - db_postgres
+      - db_postgres2
 #      - redis
-      - celery
+      - celery2
     volumes:
-      - static:/app/collected_static/
-      - media:/app/media/
+      - static2:/app/collected_static/
+      - media2:/app/media/
       - ./backend_deposit/media:/app/media
       - ./logs:/app/logs
 #      - ./backend_deposit:/app
     entrypoint: bash /app/entrypoint.sh
 
 
-  celery:
-    container_name: celery
+  celery2:
+    container_name: celery2
     build: ./backend_deposit
     restart: always
     command: celery -A backend_deposit.celery:app worker -l warning -n myworker --concurrency=4
     volumes:
-      - media:/app/media/
+      - media2:/app/media/
       - ./logs:/app/logs
     env_file: .env
     depends_on:
-      - redis
+      - redis2
 
-  celery-beat:
-    build: ./backend_deposit
-    command: celery -A backend_deposit.celery:app beat -l info -S django
-    env_file: .env
-    depends_on:
-      - celery
+#  celery-beat:
+#    build: ./backend_deposit
+#    command: celery -A backend_deposit.celery:app beat -l info -S django
+#    env_file: .env
+#    depends_on:
+#      - celery
 
-  flower:
-    container_name: flower
-    image: mher/flower
-    build: ./backend_deposit
-    command: celery -A backend_deposit.celery flower --port=5555
-    ports:
-      - 5556:5555
-    env_file: .env
-    depends_on:
-      - backend
-      - redis
-      - celery
+#  flower:
+#    container_name: flower
+#    image: mher/flower
+#    build: ./backend_deposit
+#    command: celery -A backend_deposit.celery flower --port=5555
+#    ports:
+#      - 5556:5555
+#    env_file: .env
+#    depends_on:
+#      - backend
+#      - redis
+#      - celery
 
-  nginx:
+  nginx2:
     image: nginx:1.19.3
     env_file: .env
     restart: always
@@ -113,9 +113,9 @@ services:
       - "80:80"
       - "443:443"
     depends_on:
-      - backend
+      - backend2
 #      - flower
     volumes:
       - ./nginx_dev.conf:/etc/nginx/conf.d/default.conf:ro
-      - static:/app/static
-      - media:/app/media
+      - static2:/app/static
+      - media2:/app/media
