--- a/nginx_dev.conf
+++ b/nginx_dev.conf
@@ -7,7 +7,7 @@ server {
 
 # Для 80:
     location / {
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend2:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
