--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -77,13 +77,14 @@ services:
     container_name: celery2
     build: ./backend_deposit
     restart: always
-    command: celery -A backend_deposit.celery:app worker -l warning -n myworker --concurrency=4
+#    command: celery -A backend_deposit.celery:app worker -l warning -n myworker --concurrency=4
     volumes:
       - media2:/app/media/
       - ./logs:/app/logs
     env_file: .env
     depends_on:
       - redis2
+    entrypoint: bash /app/celery_entrypoint.sh
 
 #  celery-beat:
 #    build: ./backend_deposit
@@ -92,18 +93,17 @@ services:
 #    depends_on:
 #      - celery
 
-#  flower:
-#    container_name: flower
-#    image: mher/flower
-#    build: ./backend_deposit
-#    command: celery -A backend_deposit.celery flower --port=5555
-#    ports:
-#      - 5556:5555
-#    env_file: .env
-#    depends_on:
-#      - backend
-#      - redis
-#      - celery
+  flower:
+    container_name: flower
+    image: mher/flower
+    build: ./backend_deposit
+    command: celery -A backend_deposit.celery flower --port=5555
+    ports:
+      - 5556:5555
+    env_file: .env
+    depends_on:
+      - backend2
+      - celery2
 
   nginx2:
     image: nginx:1.19.3
