--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     client_max_body_size 10M;
-    server_name loclahost 194.87.252.238 127.0.0.1;
+    server_name localhost 194.87.252.238 45.67.228.39 127.0.0.1;
     server_tokens off;
 
 
@@ -25,46 +25,46 @@ server {
 
 }
 
-server {
-    listen 80;
-    client_max_body_size 10M;
-    server_name oldit.ru www.oldit.ru;
-    server_tokens off;
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-    location / {
-        return 301 https://oldit.ru$request_uri;
-    }
-}
-
-
-    server {
-    listen 443 default_server ssl http2;
-    listen [::]:443 ssl http2;
-    server_name asu-payme.com;
-
-    ssl_certificate /etc/nginx/ssl/live/oldit.ru/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/oldit.ru/privkey.pem;
-
-    location / {
-        proxy_pass http://backend:8000;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-    location /static/ {
-        alias /app/static/;
-    }
-
-     location /media {
-        autoindex on;
-        alias /app/media/;
-    }
-
-        location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-}
+# server {
+#     listen 80;
+#     client_max_body_size 10M;
+#     server_name oldit.ru www.oldit.ru;
+#     server_tokens off;
+#     location /.well-known/acme-challenge/ {
+#         root /var/www/certbot;
+#     }
+#     location / {
+#         return 301 https://oldit.ru$request_uri;
+#     }
+# }
+#
+#
+#     server {
+#     listen 443 default_server ssl http2;
+#     listen [::]:443 ssl http2;
+#     server_name asu-payme.com;
+#
+#     ssl_certificate /etc/nginx/ssl/live/oldit.ru/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/ssl/live/oldit.ru/privkey.pem;
+#
+#     location / {
+#         proxy_pass http://backend:8000;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header Host $host;
+#         proxy_redirect off;
+#     }
+#     location /static/ {
+#         alias /app/static/;
+#     }
+#
+#      location /media {
+#         autoindex on;
+#         alias /app/media/;
+#     }
+#
+#         location /.well-known/acme-challenge/ {
+#         root /var/www/certbot;
+#     }
+# }
 
 
