--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     client_max_body_size 10M;
-    server_name loclahost 45.67.228.39 194.87.252.238 194.190.152.79 127.0.0.1;
+    server_name loclahost 45.67.228.39 194.87.252.238 194.190.152.79 127.0.0.1 193.124.33.223;
     server_tokens off;
 
 
