--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,7 @@ services:
 
   flower:
     container_name: flower
+    restart: always
     image: mher/flower
     build: ./backend_deposit
     command: celery -A backend_deposit.celery flower --port=5555 --basic-auth=Maniac:password1
@@ -96,6 +97,7 @@ services:
 
   celery-beat:
     build: ./backend_deposit
+    restart: always
     command: celery -A backend_deposit beat -l info -S django
     env_file: .env
     depends_on:
