--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -17,7 +17,7 @@ services:
 #      - ./postgres/postgres-data.conf:/var/lib/postgresql/data
       - pg_data:/var/lib/postgresql/data
     ports:
-      - "15432:5432"
+      - "25432:5432"
     restart: always
 
 
@@ -63,7 +63,7 @@ services:
     depends_on:
       - db_postgres2
 #      - redis
-      - celery2
+#      - celery2
     volumes:
       - static2:/app/collected_static/
       - media2:/app/media/
@@ -73,18 +73,18 @@ services:
     entrypoint: bash /app/entrypoint.sh
 
 
-  celery2:
-    container_name: celery2
-    build: ./backend_deposit
-    restart: always
-#    command: celery -A backend_deposit.celery:app worker -l warning -n myworker --concurrency=4
-    volumes:
-      - media2:/app/media/
-      - ./logs:/app/logs
-    env_file: .env
-    depends_on:
-      - redis2
-    entrypoint: bash /app/celery_entrypoint.sh
+#  celery2:
+#    container_name: celery2
+#    build: ./backend_deposit
+#    restart: always
+##    command: celery -A backend_deposit.celery:app worker -l warning -n myworker --concurrency=4
+#    volumes:
+#      - media2:/app/media/
+#      - ./logs:/app/logs
+#    env_file: .env
+#    depends_on:
+#      - redis2
+#    entrypoint: bash /app/celery_entrypoint.sh
 
 #  celery-beat:
 #    build: ./backend_deposit
@@ -103,7 +103,7 @@ services:
     env_file: .env
     depends_on:
       - backend2
-      - celery2
+#      - celery2
 
   nginx2:
     image: nginx:1.19.3
