--- a/nginx_dev.conf
+++ b/nginx_dev.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     client_max_body_size 10M;
-    server_name loclahost 194.87.252.238 127.0.0.1 0.0.0.0;
+    server_name localhost 194.87.252.238 127.0.0.1 0.0.0.0;
     server_tokens off;
 
 
@@ -13,10 +13,10 @@ server {
         proxy_redirect off;
     }
 
-        location /media {
-        autoindex on;
-        alias /app/media/;
-    }
+        location /media/ {
+            autoindex on;
+            alias /app/media/;
+        }
 
         location /static/ {
         alias /app/static/;
