--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 volumes:
-  pg_data:
+  pg_data2:
   pgadmin_data2:
   redis_data2:
   static2:
@@ -15,7 +15,7 @@ services:
     volumes:
       - ./postgres/init_db:/docker-entrypoint-initdb.d
 #      - ./postgres/postgres-data.conf:/var/lib/postgresql/data
-      - pg_data:/var/lib/postgresql/data
+      - pg_data2:/var/lib/postgresql/data
     ports:
       - "25432:5432"
     restart: always
@@ -69,8 +69,14 @@ services:
       - media2:/app/media/
       - ./backend_deposit/media:/app/media
       - ./logs:/app/logs
-#      - ./backend_deposit:/app
+      - ./backend_deposit:/app
     entrypoint: bash /app/entrypoint.sh
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
 
   celery2:
@@ -113,7 +119,8 @@ services:
       - "80:80"
       - "443:443"
     depends_on:
-      - backend2
+      backend2:
+        condition: service_healthy
 #      - flower
     volumes:
       - ./nginx_dev.conf:/etc/nginx/conf.d/default.conf:ro
