--- a/nginx_dev.conf
+++ b/nginx_dev.conf
@@ -4,13 +4,20 @@ server {
     server_name localhost 194.87.252.238 127.0.0.1 0.0.0.0;
     server_tokens off;
 
+    # Резолвер для DNS (для автоматического перерезолвинга при перезапуске контейнеров)
+    resolver 127.0.0.11 valid=30s;
+    resolver_timeout 5s;
 
 # Для 80:
     location / {
-        proxy_pass http://backend2:8000;
+        set $backend http://backend2:8000;
+        proxy_pass $backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 
         location /media/ {
