--- a/env.example
+++ b/env.example
@@ -30,6 +30,9 @@ WORKERS=5
 BIRPAY_LOGIN=
 BIRPAY_PASSWORD=
 
+# Z-ASU: URL платежной системы (Payment) для создания/подтверждения платежей
+# ASU_HOST=http://127.0.0.1:8000
+
 BOT_POSTGRES_USER=
 BOT_POSTGRES_PASSWORD=
 BOT_POSTGRES_DB=
